--- a/css/styles.css
+++ b/css/styles.css
@@ -582,3 +582,4 @@ html[data-theme="dark"] .modal__window {
   .about__content { grid-template-columns: 80px 1fr; }
   .about__photo { width: 80px; height: 80px; }
 }
+b
